--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>My project</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nisi nesciunt, omnis, eligendi maxime doloribus facere minima fugit earum laudantium magnam ut temporibus error harum placeat dolores nihil dicta, illo laborum? Itaque commodi adipisci tempore. Ullam necessitatibus cum, numquam eaque voluptates nobis velit asperiores ea dolor quasi fugit sint iusto.</p>
-    <p> Mirja Riyadh </p>
+    <p>This is my modification.</p>
 </body>
 </html>
