--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>My project</h1>
     <p>This is my modification.</p>
+
+    <input type="email" name="email">
+    <input type="submit" value="Send">
 </body>
 </html>
